--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,9 @@
-version=1.2.0-SNAPSHOT
+version=1.2.1
 group=sh.rime.reactor
 
 org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 
-mvn.releasesRepoUrl=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
-mvn.snapshotsRepoUrl=https://s01.oss.sonatype.org/content/repositories/snapshots/
 mvn.username=xxx
 mvn.password=xxx
 release.branch=main
