--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=1.2.1
+version=0.2.1-SNAPSHOT
 group=sh.rime.reactor
 
 org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
