--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,24 +42,37 @@ jobs:
       - name: Compute next version for release
         if: inputs.perform_release
         run: |
-          echo "VERSION_NEXT=`svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }}`" | tee -a $GITHUB_ENV
-          echo "VERSION_NEXT_SUFFIX=`svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }}`" | tee -a $GITHUB_ENV
+          VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
+          VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
+          echo "VERSION_NEXT=${VERSION_NEXT}"
+          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}"
+          echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
+          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Compute next version for snapshot
         if: inputs.perform_release != true
         run: |
-          echo "VERSION_NEXT=`svu --pattern="v[0-9]*" --strip-prefix next`" | tee -a $GITHUB_ENV
-          echo "VERSION_NEXT_SUFFIX=`svu --pattern="v[0-9]*" --strip-prefix next`-SNAPSHOT" | tee -a $GITHUB_ENV
+          VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix next)
+          VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix next)-SNAPSHOT
+          echo "VERSION_NEXT=${VERSION_NEXT}"
+          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}"
+          echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
+          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Set Versions
         id: versions
         run: |
-          echo "version_current=`svu --pattern="v[0-9]*" --strip-prefix current`" >> $GITHUB_OUTPUT
-          echo "version_next=${{ env.VERSION_NEXT_SUFFIX }}" >> $GITHUB_OUTPUT
-          [[ `svu --pattern="v[0-9]*" --strip-prefix current` != ${{ env.VERSION_NEXT }} ]] && echo "should_release=true" >> $GITHUB_OUTPUT || echo
-      - name: Show computed versions
-        run: |
-          echo "Current version: ${{ steps.set-versions.outputs.version_current }}"
-          echo "Next version: ${{ steps.compute-version.outputs.VERSION_NEXT }}"
-          echo "Should release: ${{ steps.set-versions.outputs.should_release }}"
+          VERSION_CURRENT=$(svu --pattern="v[0-9]*" --strip-prefix current)
+          VERSION_NEXT=${{ env.VERSION_NEXT_SUFFIX }}
+          echo "version_current=${VERSION_CURRENT}"
+          echo "version_next=${VERSION_NEXT}"
+          echo "version_current=${VERSION_CURRENT}" >> $GITHUB_OUTPUT
+          echo "version_next=${VERSION_NEXT}" >> $GITHUB_OUTPUT
+          if [ "${VERSION_CURRENT}" != "${VERSION_NEXT}" ]; then
+            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "Should release: true"
+          else
+            echo "should_release=false" >> $GITHUB_OUTPUT
+            echo "Should release: false"
+          fi
   release:
     needs: [ version ]
     runs-on: ubuntu-latest
