--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,6 @@ jobs:
         run: |
           VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
           VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
-          echo "VERSION_NEXT=${VERSION_NEXT}"
-          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}"
           echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
           echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Compute next version for snapshot
@@ -53,8 +51,6 @@ jobs:
         run: |
           VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix next)
           VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix next)-SNAPSHOT
-          echo "VERSION_NEXT=${VERSION_NEXT}"
-          echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}"
           echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
           echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Set Versions
@@ -62,8 +58,6 @@ jobs:
         run: |
           VERSION_CURRENT=$(svu --pattern="v[0-9]*" --strip-prefix current)
           VERSION_NEXT=${{ env.VERSION_NEXT_SUFFIX }}
-          echo "version_current=${VERSION_CURRENT}"
-          echo "version_next=${VERSION_NEXT}"
           echo "version_current=${VERSION_CURRENT}" >> $GITHUB_OUTPUT
           echo "version_next=${VERSION_NEXT}" >> $GITHUB_OUTPUT
           if [ "${VERSION_CURRENT}" != "${VERSION_NEXT}" ]; then
@@ -99,7 +93,7 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.MAVENCENTRAL_USER }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.MAVENCENTRAL_PASSWORD }}
         with:
-          arguments: publishToSonatype closeAndReleaseSonatypeStagingRepository
+          arguments: publish
       - name: Release commit and push
         uses: EndBug/add-and-commit@v9
         if: inputs.perform_release
