--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,41 @@ on:
           - 'patch'
 
 jobs:
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-22.04, macos-12 ]
+      fail-fast: false
+    name: Test ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+      - name: Install libraries for Linux/Mac
+        if: contains(matrix.os, 'ubuntu') || contains(matrix.os, 'macos')
+        run: brew install webp jpeg-xl libheif
+        env:
+          HOMEBREW_NO_INSTALL_CLEANUP: 1
+          HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'liberica'
+          java-version: '21'
+      - name: Gradle build
+        uses: gradle/actions/setup-gradle@v3
+        env:
+          LD_LIBRARY_PATH: /home/linuxbrew/.linuxbrew/lib
+          JAVA_LIBRARY_PATH: /usr/local/lib/
+        run: ./gradlew build
+      - name: Upload Unit Test Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports-${{ matrix.os }}
+          path: '**/build/reports/tests/'
   version:
     runs-on: macos-latest
     if: github.repository_owner == 'youtaqiu' && github.ref == 'refs/heads/main'
