chore: add .DS_Store to .gitignore
Added .DS_Store to the .gitignore file to prevent macOS system files from being tracked by Git.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ replay_pid*
 .gradle
 **/build/
 !src/**/build/
+**/bin/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -45,7 +46,7 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
-
+.DS_Store
 /.idea/
 /.vscode/
 /.fleet/
