feat: new version commit: 'v1.4.1-SNAPSHOT'.

--- a/shore-starters/build.gradle
+++ b/shore-starters/build.gradle
@@ -6,5 +6,5 @@ plugins {
 
 subprojects {
 	apply plugin : "sh.rime.common"
-    apply plugin : "sh.rime.deployed"
+    apply plugin : "sh.rime.mvn.deployed"
 }
