--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -41,6 +41,10 @@ gradlePlugin {
             id = "sh.rime.service"
             implementationClass = "sh.rime.plugin.ServicePlugin"
         }
+        create("deployedPlugin") {
+            id = "sh.rime.mvn.deployed"
+            implementationClass = "sh.rime.plugin.maven.DeployedPlugin"
+        }
     }
 }
 
