--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-12 ]
+        os: [ ubuntu-22.04 ]
       fail-fast: false
     name: Test ${{ matrix.os }}
     steps:
@@ -36,7 +36,7 @@ jobs:
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
       - name: Install libraries for Linux/Mac
-        if: contains(matrix.os, 'ubuntu') || contains(matrix.os, 'macos')
+        if: contains(matrix.os, 'ubuntu')
         run: brew install webp jpeg-xl libheif
         env:
           HOMEBREW_NO_INSTALL_CLEANUP: 1
