feat: new version commit: 'v1.8.0-SNAPSHOT'.

--- a/shore-starters/shore-http/build.gradle
+++ b/shore-starters/shore-http/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     optional "org.springframework.cloud:spring-cloud-commons"
     optional "io.projectreactor.netty:reactor-netty-core"
     optional "io.projectreactor.netty:reactor-netty-http"
+    implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
 }
