--- a/shore-core/build.gradle
+++ b/shore-core/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     api "io.vavr:vavr"
     api "org.hibernate.validator:hibernate-validator"
     api "com.github.ben-manes.caffeine:caffeine"
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     api "org.springdoc:springdoc-openapi-starter-webflux-ui"
     api "org.springframework.boot:spring-boot-starter-webflux"
     optional "io.projectreactor:reactor-core"
