ci: update codecov ci

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ configure(modules) {
 
     test {
         finalizedBy jacocoTestReport
+        reports.junitXml.destination = file("$buildDir/test-results/test")
         useJUnitPlatform()
         testLogging {
             minGranularity = 3
