--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Project CI
 
 on:
-  pull_request:
   push:
-#    branches-ignore:
-#      - 'feature/**'
+    branches: [ master,main ]
+  pull_request:
+    branches: [ master,main ]
   workflow_dispatch:
     inputs:
       perform_release:
