--- a/shore-starters/shore-logging/build.gradle
+++ b/shore-starters/shore-logging/build.gradle
@@ -3,6 +3,7 @@ description "shore logging starter"
 dependencies {
     api "org.springframework.boot:spring-boot-starter-logging"
     api "com.github.loki4j:loki-logback-appender"
+    optional 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.7.0-alpha'
     optional "org.springframework.boot:spring-boot-autoconfigure"
     optional "org.springframework.cloud:spring-cloud-context"
     optional "com.github.spotbugs:spotbugs-annotations"
