--- a/shore-starters/shore-security/build.gradle
+++ b/shore-starters/shore-security/build.gradle
@@ -2,7 +2,7 @@ description "shore security starter"
 
 dependencies {
     api project(":shore-core")
-    api project(":shore-starters:shore-redis")
+    optional project(":shore-starters:shore-redis")
     api "org.springframework.boot:spring-boot-starter-security"
     optional "org.springframework:spring-webflux"
     optional "io.projectreactor:reactor-core"
