--- a/shore-starters/shore-s3/build.gradle
+++ b/shore-starters/shore-s3/build.gradle
@@ -3,6 +3,6 @@ description "shore s3 starter"
 dependencies {
     compileOnly project(":shore-core")
     compileOnly "org.springframework.boot:spring-boot-autoconfigure"
-    api "com.amazonaws:aws-java-sdk-s3"
-    api "com.amazonaws:aws-java-sdk-sts"
+    api "software.amazon.awssdk:s3"
+    api "software.amazon.awssdk:sts"
 }
