--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,14 +121,23 @@ jobs:
         with:
           distribution: 'liberica'
           java-version: '21'
-      - name: Nexus publish
+      - name: Publish Artifacts to Nexus
         run: ./gradlew publish
+      - name: Fetch and Rebase with Remote
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git fetch origin
+          git rebase origin/main
       - name: Release commit and push
         uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5
         if: inputs.perform_release
         with:
           message: 'chore(release): ${{ needs.version.outputs.version_next }} [skip ci]'
           default_author: github_actions
+        env:
+          GIT_COMMITTER_NAME: GitHub Actions
+          GIT_COMMITTER_EMAIL: actions@github.com
       - name: JReleaser full release
         if: inputs.perform_release
         env:
