--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ subprojects {
 
 configure(allprojects) {
     repositories {
+        maven { url "https://mirrors.cloud.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://repo.spring.io/release" }
         maven { url "https://plugins.gradle.org/m2/" }
     }
