--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "groovy-gradle-plugin"
 repositories {
     maven { url "https://plugins.gradle.org/m2/" }
     maven { url "https://repo.spring.io/release" }
+    maven { url "https://mirrors.cloud.tencent.com/nexus/repository/maven-public" }
 }
 
 ext {
