--- a/shore-starters/shore-test/build.gradle
+++ b/shore-starters/shore-test/build.gradle
@@ -1,6 +1,7 @@
 description "shore test starter"
 
 dependencies {
+    optional project(":shore-core")
     optional project(":shore-starters:shore-security")
     api 'org.springframework.boot:spring-boot-starter-test'
     api 'org.springframework.security:spring-security-test'
