--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-springBoot = "3.4.0"
+springBoot = "3.3.5"
 springCloud = "2023.0.3"
 hutool = "5.8.33"
 slf4jApi = "2.0.16"
 logstash = "8.0"
 loki4j = "1.5.2"
 jjwt = "0.12.6"
-springdoc = "2.7.0"
+springdoc = "2.6.0"
 r2dbcMysql = "1.3.0"
 vavr = "0.10.5"
 redisson = "3.39.0"
@@ -21,6 +21,7 @@ reactorRabbitmq = "1.5.6"
 swaggerV3Annotations = "2.2.26"
 awsSdk = "2.29.21"
 okhttp3 = "5.0.0-alpha.14"
+lombok = "1.18.36"
 
 [libraries]
 r2dbc-mysql = { group = "io.asyncer", name = "r2dbc-mysql", version.ref = "r2dbcMysql" }
@@ -44,6 +45,7 @@ swagger-v3-annotations = { group = "io.swagger.core.v3", name = "swagger-annotat
 aws-sdk-s3 = { group = "software.amazon.awssdk", name = "s3", version.ref = "awsSdk" }
 aws-sdk-sts = { group = "software.amazon.awssdk", name = "sts", version.ref = "awsSdk" }
 squareup-okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp3" }
+lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "springBoot" }
