--- a/shore-core/build.gradle
+++ b/shore-core/build.gradle
@@ -16,7 +16,6 @@ dependencies {
     api "org.hibernate.validator:hibernate-validator"
     api "com.github.ben-manes.caffeine:caffeine"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    api "org.springdoc:springdoc-openapi-starter-webflux-ui"
-    api "org.springframework.boot:spring-boot-starter-webflux"
+    optional "org.springframework.boot:spring-boot-starter-webflux"
     optional "io.projectreactor:reactor-core"
 }
