--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,21 +78,21 @@ jobs:
       - name: Compute next version for release
         if: inputs.perform_release
         run: |
-          VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
-          VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix ${{ inputs.bump }})
+          VERSION_NEXT=$(svu ${{ inputs.bump }})
+          VERSION_NEXT_SUFFIX=$(svu ${{ inputs.bump }})
           echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
           echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Compute next version for snapshot
         if: inputs.perform_release != true
         run: |
-          VERSION_NEXT=$(svu --pattern="v[0-9]*" --strip-prefix next)
-          VERSION_NEXT_SUFFIX=$(svu --pattern="v[0-9]*" --strip-prefix next)-SNAPSHOT
+          VERSION_NEXT=$(svu next)
+          VERSION_NEXT_SUFFIX=$(svu next)-SNAPSHOT
           echo "VERSION_NEXT=${VERSION_NEXT}" | tee -a $GITHUB_ENV
           echo "VERSION_NEXT_SUFFIX=${VERSION_NEXT_SUFFIX}" | tee -a $GITHUB_ENV
       - name: Set Versions
         id: versions
         run: |
-          VERSION_CURRENT=$(svu --pattern="v[0-9]*" --strip-prefix current)
+          VERSION_CURRENT=$(svu current)
           VERSION_NEXT=${{ env.VERSION_NEXT_SUFFIX }}
           echo "version_current=${VERSION_CURRENT}" >> $GITHUB_OUTPUT
           echo "version_next=${VERSION_NEXT}" >> $GITHUB_OUTPUT
