--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ loki4j = "1.6.0"
 jjwt = "0.12.6"
 springdoc = "2.8.3"
 r2dbcMysql = "1.3.2"
+r2dbcPostgresql = "1.0.7.RELEASE"
 vavr = "0.10.5"
 redisson = "3.43.0"
 spotbugsAnnotations = "4.9.0"
@@ -25,6 +26,7 @@ lombok = "1.18.36"
 
 [libraries]
 r2dbc-mysql = { group = "io.asyncer", name = "r2dbc-mysql", version.ref = "r2dbcMysql" }
+r2dbc-postgresql = { group = "org.postgresql", name = "r2dbc-postgresql", version.ref = "r2dbcPostgresql" }
 redisson-starter = { group = "org.redisson", name = "redisson-spring-boot-starter", version.ref = "redisson" }
 redisson = { group = "org.redisson", name = "redisson", version.ref = "redisson" }
 logstash-logback-encoder = { group = "net.logstash.logback", name = "logstash-logback-encoder", version.ref = "logstash" }
