--- a/shore-starters/shore-r2dbc/build.gradle
+++ b/shore-starters/shore-r2dbc/build.gradle
@@ -4,10 +4,12 @@ dependencies {
     optional project(":shore-starters:shore-security")
     optional project(":shore-core")
     api "org.springframework.boot:spring-boot-starter-data-r2dbc"
-    runtimeOnly "io.asyncer:r2dbc-mysql"
-    testCompileOnly "io.asyncer:r2dbc-mysql"
+//    runtimeOnly "io.asyncer:r2dbc-mysql"
+    runtimeOnly "org.postgresql:r2dbc-postgresql"
+    testCompileOnly "org.postgresql:r2dbc-postgresql"
+//    testCompileOnly "io.asyncer:r2dbc-mysql"
     testCompileOnly "io.r2dbc:r2dbc-h2"
     testRuntimeOnly "io.r2dbc:r2dbc-h2"
-    runtimeOnly "com.mysql:mysql-connector-j"
-    api "org.flywaydb:flyway-mysql"
+//    runtimeOnly "com.mysql:mysql-connector-j"
+//    api "org.flywaydb:flyway-mysql"
 }
