chore(deps): update dependencies and add JUnit platform launcher
- Bump Spring Boot version from 3.4.5 to 3.5.0
- Update Loki4j version from 1.6.0 to 2.0.0
- Upgrade Springdoc version from 2.8.6 to 2.8.9
- Update Swagger annotations version from 2.2.30 to 2.2.33
- Upgrade OkHttp version from 5.0.0-alpha.14 to 5.0.0-alpha.16
- Add JUnit platform launcher as a test runtime dependency

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ configure(modules) {
         testImplementation "org.springframework:spring-tx"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
         testImplementation "io.projectreactor:reactor-test"
+        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     }
 
     test {
