--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,25 @@
 [versions]
-springBoot = "3.4.5"
+springBoot = "3.5.0"
 springCloud = "2023.0.3"
 hutool = "5.8.37"
 slf4jApi = "2.0.17"
 logstash = "8.1"
-loki4j = "1.6.0"
+loki4j = "2.0.0"
 jjwt = "0.12.6"
 r2dbcPostgresql = "1.0.7.RELEASE"
-springdoc = "2.8.6"
+springdoc = "2.8.9"
 r2dbcMysql = "1.4.1"
 vavr = "0.10.6"
 redisson = "3.45.1"
 spotbugsAnnotations = "4.9.3"
-swaggerAnnotations = "2.2.30"
+swaggerAnnotations = "2.2.33"
 mapstruct = "1.6.3"
 mapstructSpring = "1.1.3"
 jreleaserhVersion = "1.17.0"
 qualityVersion = "5.0.0"
 opentelemetry = "2.15.0"
 reactorRabbitmq = "1.5.6"
-swaggerV3Annotations = "2.2.30"
-awsSdk = "2.31.30"
-okhttp3 = "5.0.0-alpha.14"
+okhttp3 = "5.0.0-alpha.16"
 lombok = "1.18.38"
 
 [libraries]
@@ -43,9 +41,7 @@ spring-doc = { group = "org.springdoc", name = "springdoc-openapi-starter-webflu
 vavr = { group = "io.vavr", name = "vavr", version.ref = "vavr" }
 opentelemetry-extension = { group = "io.opentelemetry.instrumentation", name = "opentelemetry-instrumentation-annotations", version.ref = "opentelemetry" }
 reactor-rabbitmq = { group = "io.projectreactor.rabbitmq", name = "reactor-rabbitmq", version.ref = "reactorRabbitmq" }
-swagger-v3-annotations = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swaggerV3Annotations" }
-aws-sdk-s3 = { group = "software.amazon.awssdk", name = "s3", version.ref = "awsSdk" }
-aws-sdk-sts = { group = "software.amazon.awssdk", name = "sts", version.ref = "awsSdk" }
+swagger-v3-annotations = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swaggerAnnotations" }
 squareup-okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp3" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 
