--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ jreleaserhVersion = "1.20.0"
 qualityVersion = "6.0.1"
 opentelemetry = "2.20.0"
 reactorRabbitmq = "1.5.6"
+reactorKafka = "1.3.24"
 okhttp3 = "5.1.0"
 lombok = "1.18.42"
 
@@ -41,6 +42,7 @@ spring-doc = { group = "org.springdoc", name = "springdoc-openapi-starter-webflu
 vavr = { group = "io.vavr", name = "vavr", version.ref = "vavr" }
 opentelemetry-extension = { group = "io.opentelemetry.instrumentation", name = "opentelemetry-instrumentation-annotations", version.ref = "opentelemetry" }
 reactor-rabbitmq = { group = "io.projectreactor.rabbitmq", name = "reactor-rabbitmq", version.ref = "reactorRabbitmq" }
+reactor-kafka = { group = "io.projectreactor.kafka", name = "reactor-kafka", version.ref = "reactorKafka" }
 swagger-v3-annotations = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swaggerAnnotations" }
 squareup-okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp3" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
