--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,11 +1,9 @@
 project:
   name: shore
-  description: Shore is uses the Reactor framework, including WebFlux for non-blocking web applications, R2DBC for reactive database connectivity, Reactive Redis for reactive operations on Redis, and Reactor RabbitMQ for reactive messaging with RabbitMQ.
-  version: 1.0.0
+  description: Shore uses the Reactor stack: WebFlux, R2DBC, Redis, Reactor RabbitMQ/Kafka.
   website: https://github.com/youtaqiu/shore
   license: Apache-2.0
   java:
-    groupId: org.codehaus.griffon
     version: 21
     multiProject: true
   extraProperties:
@@ -18,6 +16,7 @@ release:
     name: shore
     branch: main
     overwrite: true
+    tagName: v{{projectVersion}}
     sign: true
     changelog:
       formatted: ALWAYS
@@ -40,4 +39,4 @@ deploy:
         active: ALWAYS
         url: https://central.sonatype.com/api/v1/publisher
         stagingRepositories:
-          - target/staging-deploy
+          - build/staging-deploy
