feat(limit): add comprehensive test suite for rate limiting components
test: add unit tests for LimitAspect, LimitAutoConfiguration, LimitSupport, and RedissonLimitProvider
chore: update package namespace from sh.rime to run.vexa
chore: upgrade Gradle to 9.1.0 and Java to 21.0.8
docs: add missing javadoc to Kafka components
refactor: improve Kafka configuration with better structure and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,6 @@ replay_pid*
 
 # Ignore Gradle GUI config
 gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
 # Cache of project
 .gradletasknamecache
 
@@ -51,7 +44,6 @@ gradle-app.setting
 /.vscode/
 /.fleet/
 /.jreleaser/
-/gradlew.bat
-/gradlew
 /gradle
 /gradle.properties
+!gradle/wrapper/**
