--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Project CI
 
+permissions:
+  contents: write
+  packages: write
+
 on:
   push:
     branches: [ master,main ]
@@ -138,5 +142,5 @@ jobs:
           JRELEASER_MAVENCENTRAL_PASSWORD: ${{ secrets.MAVENCENTRAL_PASSWORD }}
           JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
-          JRELEASER_GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew assemble jreleaserFullRelease --no-daemon --info --stacktrace --warning-mode all
