--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ gradle-app.setting
 /gradle
 /gradle.properties
 !gradle/wrapper/**
+
+#Ignore vscode AI rules
+.github/instructions/codacy.instructions.md
